--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
-<h1>Hey, I'm a big heading</h1>
-<p>Hey. I'm a paragraph element</p>
-<a href="https://google.com" target="_blank" title="Hey, it's me Goku!">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head><title>Test Page</title>
+</head>
+<body>
+	<h1>Hey, I'm a big heading</h1>
+	<p>Hey. I'm a <b>paragraph</b> element</p>
+	<a href="https://google.com" target="_blank" title="Hey, it's me Goku!">Click me! I'm a link!</a>
+	<img src="https://preview.redd.it/anyone-know-where-the-hell-this-image-of-vegeta-is-from-v0-xvpfgi2pfgra1.jpg?auto=webp&s=a9399fcedacaeee68a41f3715f36c8356cff293a">
+	<p>Hey it's me: <br> Goku</p>
+</body>
+</html>
