--- a/style-test.html
+++ b/style-test.html
@@ -4,9 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Style test</title>
+	<style type="text/css">
+		h1{
+			font-size: 40px;
+			color: navy;
+
+
+		}
+	</style>
+
 </head>
 <body>
-	<h1>Heading 1-1</h1>
+	<h1 style="background-color: beige;">Heading 1-1</h1>
 	<h1>Heading 1-2</h1>
 	<h1>Heading 1-3</h1>
 	<h2>Heading 2-1</h2>
