alt attribute removed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <main>
 	<h2>About Vegeta</h2>
 	<p>Vegeta is the prince of all saiyans, starting out as a heartless warrior and ending up as a loving husband, friend and father as the story progresses</p>
-	<img src="https://64.media.tumblr.com/02c40793166446cfcfa97487922247a5/tumblr_njcvpgDIdk1r7j91oo4_1280.gifv" alt="this slowpoke moves">
+	<img src="https://64.media.tumblr.com/02c40793166446cfcfa97487922247a5/tumblr_njcvpgDIdk1r7j91oo4_1280.gifv">
 	<p>The prince finally feeling pride for another.</p>
 	<h2>Charactericstics</h2>
 	<!--Characteristics -->
