Css halfway through

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Vegeta</title>
 	<link rel="icon" href="https://w0.peakpx.com/wallpaper/130/929/HD-wallpaper-majin-vegeta-ball-dragon.jpg">
 	<!-- Remember to link two files together before freaking out that the css attributes aren't working :) -->
-	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link rel="stylesheet" type="text/css" href="hero.css">
 </head>
 <body>
 <!-- header element -->
