Css for site, some html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Vegeta</title>
+	<title>Prince Vegeta</title>
 	<link rel="icon" href="https://w0.peakpx.com/wallpaper/130/929/HD-wallpaper-majin-vegeta-ball-dragon.jpg">
 	<!-- Remember to link two files together before freaking out that the css attributes aren't working :) -->
 	<link rel="stylesheet" type="text/css" href="hero.css">
 </head>
 <body>
 <!-- header element -->
+<!-- making a rectrangular image into a cirle is simple, these are the attributes:
+	border-radius: ypx;
+	width: xpx;
+-->
 <header>
 	<img src="https://w0.peakpx.com/wallpaper/130/929/HD-wallpaper-majin-vegeta-ball-dragon.jpg">
-	<h1>Vegeta</h1>
+	<h1>Prince Vegeta</h1>
 </header>
 
 <!-- Main element -->
@@ -20,12 +24,12 @@
 	<h2>About Vegeta</h2>
 	<p>Vegeta is the prince of all saiyans, starting out as a heartless warrior and ending up as a loving husband, friend and father as the story progresses</p>
 	<img src="https://64.media.tumblr.com/02c40793166446cfcfa97487922247a5/tumblr_njcvpgDIdk1r7j91oo4_1280.gifv">
-	<p>The prince finally feeling pride for another.</p>
+	<p style="font-size: 15px; line-height:0px; padding-bottom:20px;"><i>The prince finally feeling pride for another.</i></p>
 	<h2>Charactericstics</h2>
 	<!--Characteristics -->
 	<ol>
 		<li>One of the last saiyans alive</li>
-		<li>Prideful</li>
+		<li> <b>Prideful</b></li>
 		<li>Antagonist turned ally</li>
 	</ol>
 	<h2>Vegeta's family, Click on the lists below to know more about them!</h2>
@@ -40,7 +44,7 @@
 </main>
 
 <footer>
-	<p>This site was made as a project for Skillshare</p>
+	<p>This site was made as a project for <i>Skillshare</i></p>
 	<a href="https://media.tenor.com/B7EoWzeDA0gAAAAC/dragon-ball-z-goku-vs-vegeta.gif" target="_blank"></a>
 </footer>
 
